Bug fixes on manage cars persmissions.

--- a/views/services/index.ejs
+++ b/views/services/index.ejs
@@ -72,8 +72,12 @@
                                                                 </a>
 
                                                             </td>
-                                                            <td><%- service?.car?.brand%> <%- service?.car?.model%>
-                                                                <%- service?.car?.plate%></td>
+                                                            <td>
+                                                                <a class="btn-link" href="/car/<%- service?.car.id%>">
+                                                                    <%- service?.car?.brand%> <%- service?.car?.model%>
+                                                                    <%- service?.car?.plate%>
+                                                                </a>
+                                                            </td>
                                                             <td>
                                                                 <%= moment(service.date).isValid() ? moment(service.date).format(completeDateFormat) : 'N/A' %>
 
