--- a/views/cars/index.ejs
+++ b/views/cars/index.ejs
@@ -67,9 +67,10 @@
                                                             <th>Brand</th>
                                                             <th>Model</th>
                                                             <th>Plate</th>
-                                                            <% if(canManageCars) { %>
+                                                            <th>Services (Qty.)</th>
+                                                            <%# if(canManageCars) { %>
                                                             <th>Action</th>
-                                                            <% } %>
+                                                            <%# } %>
                                                         </tr>
                                                     </thead>
                                                     <tbody>
@@ -83,9 +84,11 @@
 
                                                             <td><%- car.model%></td>
                                                             <td><%- car.plate%></td>
+                                                            <td><%- car.services?.length%></td>
 
                                                             <td>
-                                                                <% if(canManageCars) { %>
+                                                                <%# if(canManageCars) { %>
+                                                                <% if(car.services.length == 0) { %>
                                                                 <a href="/edit-car/<%- car.id%>?url=/cars" type="button"
                                                                     class="btn btn-icon btn-icon-no-border no-margin">
                                                                     <i class="far fa-edit icon-sm"></i>
@@ -96,6 +99,8 @@
                                                                     class="btn btn-icon btn-icon-no-border no-margin">
                                                                     <i class="fas fa-trash-alt icon-sm text-danger"></i>
                                                                 </a>
+                                                                <% } else { %>
+                                                                N/A
                                                                 <% } %>
                                                             </td>
                                                         </tr>
