--- a/views/cars/view.ejs
+++ b/views/cars/view.ejs
@@ -50,7 +50,7 @@
                                     <div class="card card-rounded">
                                         <div class="card-body">
                                             <div class="table-responsive mt-1">
-                                                <% if(canManageCars && canEditCar) { %>
+                                                <% if(canEditCar) { %>
                                                 <div
                                                     class="d-sm-flex justify-content-between align-items-start float-end">
                                                     <a href="/edit-car/<%- car.id%>?url=/car" type="button"
@@ -85,7 +85,12 @@
                                                                 <%- car.plate%>
                                                             </td>
                                                         </tr>
-
+                                                        <tr>
+                                                            <td>Services (Qty.)</td>
+                                                            <td>
+                                                                <%- car.services.length%>
+                                                            </td>
+                                                        </tr>
                                                     </tbody>
                                                 </table>
                                             </div>
