Optimize subscriptions info table. Optimize Validate Memberships view.

--- a/public/css/vertical-layout-light/style.css
+++ b/public/css/vertical-layout-light/style.css
@@ -21692,7 +21692,7 @@ code {
     border-radius: 100%;
 }
 
-.home-tab .btn,
+/* .home-tab .btn, */
 .home-tab .ajax-upload-dragdrop .ajax-file-upload,
 .ajax-upload-dragdrop .home-tab .ajax-file-upload,
 .home-tab .swal2-modal .swal2-buttonswrapper .swal2-styled,
@@ -33988,7 +33988,7 @@ label.required:after {
 }
 
 .validation-msgs {
-    margin: 50px 0;
+    margin: 20px 0;
 }
 
 .validation-msgs > p {
