--- a/views/dashboards/mainDashboard.ejs
+++ b/views/dashboards/mainDashboard.ejs
@@ -51,7 +51,7 @@
                                         </li>
                                         <li class="nav-item">
                                             <a class="nav-link" id="profile-tab" data-bs-toggle="tab" href="#plan"
-                                                role="tab" aria-selected="false">My Plan</a>
+                                                role="tab" aria-selected="false">My Plans</a>
                                         </li>
                                         <!-- <li class="nav-item">
                                             <a class="nav-link" id="contact-tab" data-bs-toggle="tab"
