--- a/views/dashboards/validateMembership.ejs
+++ b/views/dashboards/validateMembership.ejs
@@ -5,7 +5,7 @@
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>Validate Membership </title>
+    <title>Validate Memberships </title>
     <!-- plugins:css -->
     <link rel="stylesheet" href="../vendors/feather/feather.css">
     <link rel="stylesheet" href="../vendors/mdi/css/materialdesignicons.min.css">
@@ -13,9 +13,6 @@
     <link rel="stylesheet" href="../vendors/typicons/typicons.css">
     <link rel="stylesheet" href="../vendors/simple-line-icons/css/simple-line-icons.css">
     <link rel="stylesheet" href="../vendors/css/vendor.bundle.base.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
-        integrity="sha512-Fo3rlrZj/k7ujTnHg4CGR2D7kSs0v4LLanw2qksYuRlEzO+tcaEPQogQ0KaoGN26/zrn20ImR1DfuLWnOo7aBA=="
-        crossorigin="anonymous" referrerpolicy="no-referrer" />
     <!-- endinject -->
     <!-- Plugin css for this page -->
     <!-- <link rel="stylesheet" href="../vendors/datatables.net-bs4/dataTables.bootstrap4.css"> -->
@@ -29,10 +26,7 @@
     <!-- endinject -->
     <link rel="shortcut icon" href="../images/favicon.png" />
 
-    <script src="https://cdn.socket.io/socket.io-3.0.1.min.js"></script>
 </head>
-
-<!-- <body class="sidebar-icon-only"> -->
 
 <body>
     <div class="container-scroller">
@@ -47,10 +41,14 @@
                                 <div class="col-12 grid-margin stretch-card">
                                     <div class="card card-rounded">
                                         <div class="card-body">
+                                            <div class="d-sm-flex justify-content-between align-items-start">
+                                                <div>
+                                                    <h4 class="card-title card-title-dash">Validate Memberships</h4>
+                                                </div>
+                                            </div>
+                                            <br>
                                             <div class="row">
                                                 <div class="col-lg-4 p-3">
-                                                    <h4>Validate</h4>
-                                                    <br>
                                                     <div class="card p-3">
                                                         <h5>Read By Camera: </h5>
                                                         <div id="resultOfCameraScanLoading"></div>
@@ -108,6 +106,7 @@
                         </div>
                     </div>
                 </div>
+                <%- include('../partials/footer.ejs'); %>
             </div>
         </div>
     </div>
@@ -130,32 +129,26 @@
     <script src="../js/off-canvas.js"></script>
     <script src="../js/hoverable-collapse.js"></script>
     <script src="../js/template.js"></script>
+    <script src="../js/settings.js"></script>
+    <script src="../js/todolist.js"></script>
     <!-- endinject -->
     <!-- Custom js for this page-->
 
     <script type="text/javascript" src="https://js.stripe.com/v3/"></script>
-    <!-- <script type="text/javascript" src="../js/account.js"></script> -->
+    <script type="text/javascript" src="../js/account.js"></script>
     <script src="../js/jquery.cookie.js" type="text/javascript"></script>
     <script src="../js/dashboard.js"></script>
     <script src="../js/Chart.roundedBarCharts.js"></script>
+    <script src="https://code.jquery.com/jquery-3.5.1.js"></script>
 
     <!-- End custom js for this page-->
     <script src="../js/helper-functions.js"></script>
     <!-- Alerts Code -->
     <%- include('../partials/alerts.ejs', {message, alertType}); %>
+    <%# include('../partials/dataTable.ejs', {tableID : '#users'}); %>
 
     <script>
         // The socket is already define on navbar.
-        // const socket = io('<%# domain%>');
-
-        // Establish Route
-        // socket.on('connection');
-
-        // Send data
-        // const sendMessage = () => {
-        //     socket.emit('message', 'Test Message');
-        // }
-
         socket.on('reading-plates', () => {
 
             showResult('#resultOfCameraScan',
