--- a/views/auth/register.ejs
+++ b/views/auth/register.ejs
@@ -40,12 +40,13 @@
                     <div class="col-lg-8 mx-auto">
                         <div class="auth-form-light text-left py-5 px-4 px-sm-5">
 
-                            <a class="btn btn-outline-primary btn-icon-text float-start" id="close-registration" href="/home">
-                                <i class="fa-solid fa-angle-left"></i>
+                            <a class="btn btn-outline-primary btn-icon-text float-start" id="close-registration"
+                                href="/home">
+                                <i class="fa-solid fa-angle-left m-1 mb-0 mt-0"></i>
                                 Pricing List
                             </a>
                             <a class="btn btn-outline-primary btn-icon-text float-end" id="close-registration" href="/">
-                                Login <i class="fa-solid fa-arrow-right-to-bracket"></i>
+                                Login <i class="fa-solid fa-arrow-right-to-bracket m-1 mb-0 mt-0"></i>
                             </a>
                             <div class="brand-logo text-center">
                                 <img src="/images/mrquicks-logo.png" alt="logo">
@@ -155,6 +156,8 @@
             </div>
             <!-- content-wrapper ends -->
         </div>
+        <%- include('../partials/footer.ejs'); %>
+
         <!-- page-body-wrapper ends -->
     </div>
     <!-- container-scroller -->
