--- a/views/auth/login.ejs
+++ b/views/auth/login.ejs
@@ -64,7 +64,8 @@
                                 </div>
 
                                 <div class="mt-3">
-                                    <button class="btn btn-block btn-primary btn-lg font-weight-medium auth-form-btn"
+                                    <button
+                                        class="btn btn-block btn-primary btn-lg font-weight-medium auth-form-btn w-100"
                                         type="submit"><%= lingua.login%></button>
                                 </div>
                                 <div class="my-2 d-flex justify-content-between align-items-center">
@@ -107,8 +108,11 @@
                     </div>
                 </div>
             </div>
+
             <!-- content-wrapper ends -->
         </div>
+        <%- include('../partials/footer.ejs'); %>
+
         <!-- page-body-wrapper ends -->
     </div>
     <!-- container-scroller -->
