--- a/views/location/create.ejs
+++ b/views/location/create.ejs
@@ -90,7 +90,7 @@
                                                 <div class="row">
                                                     <div class="mt-3">
 
-                                                        <a href="/location"
+                                                        <a href="/locations"
                                                             class="btn btn-block btn-light btn-lg font-weight-medium auth-form-btn float-end">Cancel</a>
 
                                                         <button
