--- a/views/partials/sidebar.ejs
+++ b/views/partials/sidebar.ejs
@@ -1,5 +1,7 @@
 <nav class="sidebar sidebar-offcanvas" id="sidebar">
     <ul class="nav">
+        <% if([roles.ADMIN, roles.CUSTOMER].includes(user.role)) { %>
+
         <li class="nav-item">
             <a class="nav-link" href="/account">
                 <i class="fas fa-home menu-icon"></i>
@@ -24,6 +26,7 @@
                 <span class="menu-title">Stripe Charges</span>
             </a>
         </li>
+        <% } %>
         <% if([roles.ADMIN, roles.MANAGER, roles.CASHIER].includes(user.role)) { %>
         <li class="nav-item">
             <a class="nav-link" href="/validateMembership">
@@ -32,6 +35,15 @@
             </a>
         </li>
         <% } %>
+        <% if([roles.ADMIN, roles.MANAGER, roles.CASHIER].includes(user.role)) { %>
+        <li class="nav-item">
+            <a class="nav-link" href="/customers">
+                <i class="fas fa-users menu-icon"></i>
+                <span class="menu-title">Customers</span>
+            </a>
+        </li>
+        <% } %>
+
         <% if([roles.ADMIN, roles.MANAGER].includes(user.role)) { %>
         <li class="nav-item">
             <a class="nav-link" href="/users">
@@ -45,10 +57,6 @@
                 <span class="menu-title">Locations</span>
             </a>
         </li>
-
-        <% } %>
-
-        <% if([roles.ADMIN].includes(user.role)) { %>
         <li class="nav-item">
             <a class="nav-link" href="/history">
                 <i class="fas fa-history menu-icon"></i>
@@ -63,6 +71,8 @@
                 <i class="menu-arrow"></i>
             </a>
         </li>
+        <% } %>
+        <% if([roles.ADMIN].includes(user.role)) { %>
         <div class="collapse" id="ui-template">
             <li class="nav-item">
                 <a class="nav-link" data-bs-toggle="collapse" href="#ui-basic" aria-expanded="false"
