--- a/views/partials/subscriptions/information.ejs
+++ b/views/partials/subscriptions/information.ejs
@@ -1,11 +1,23 @@
-<div class="table-responsive  mt-1">
-    <% if(showManageBtn) { %>
+<div class="d-sm-flex justify-content-between align-items-start">
+    <div>
+        <h4 class="card-title card-title-dash">
+            Memberships
+        </h4>
+    </div>
     <div class="d-sm-flex justify-content-between align-items-start float-end">
+        <% if(showCreateBtn) { %>
+        <a href="/create-sub" class="btn btn-primary btn-icon-text text-white me-2" type="button">
+            <i class="fas fa-plus btn-icon-prepend"></i>Create Memberships</a>
+        <% } %>
+        <% if(showManageBtn) { %>
         <a id="manage-billing-button" class="btn btn-primary btn-icon-text manage-billing-button" style="margin: 0;"
             type="submit" value="<%- customer.billingID%>" email="<%- customer.email%>">
             <i class="fab fa-stripe-s"></i> Manage Billing</a>
+        <% } %>
     </div>
-    <% } %>
+
+</div>
+<div class="table-responsive mt-1">
     <table class="table table-hover">
         <thead>
             <tr>
