--- a/views/user/view.ejs
+++ b/views/user/view.ejs
@@ -41,7 +41,7 @@
                     <div class="row text-left">
                         <div class="col-lg-12 d-flex flex-column">
                             <div class="row flex-grow">
-                                <div class="col-12 grid-margin stretch-card">
+                                <div class="col-sm-12 col-md-6 grid-margin stretch-card">
                                     <div class="card card-rounded">
                                         <div class="card-body">
                                             <div class="d-sm-flex justify-content-between align-items-start">
@@ -53,10 +53,6 @@
                                                         View User
                                                         <% } %></h4>
                                                 </div>
-                                            </div>
-                                            <br>
-
-                                            <div class="table-responsive mt-1">
                                                 <div
                                                     class="d-sm-flex justify-content-between align-items-start float-end">
                                                     <a href="/changePassword/<%- customer.id%>?url=/view-user"
@@ -68,6 +64,10 @@
                                                         <i class="fa-solid fa-user-pen"></i> Edit Personal Info
                                                     </a>
                                                 </div>
+                                            </div>
+                                            <br>
+
+                                            <div class="table-responsive mt-1">
                                                 <table class="table table-hover">
                                                     <thead>
                                                         <tr>
@@ -83,11 +83,11 @@
                                                             </td>
                                                         </tr>
                                                         <tr>
-                                                            <td>Password</td>
+                                                            <!-- <td>Password</td>
                                                             <td id="password">
-                                                                <!-- <%- customer.password%> -->
-                                                                *********
-                                                            </td>
+                                                                <!- <%# customer.password%> -->
+                                                            <!-- ********* -->
+                                                            <!-- </td> -->
                                                         </tr>
                                                         <tr>
                                                             <td>Role</td>
@@ -126,17 +126,8 @@
                                         </div>
                                     </div>
                                 </div>
-                                <% if(customer.hasSubscription){ %>
-                                <div class="col-6 grid-margin stretch-card">
-                                    <div class="card card-rounded">
-                                        <div class="card-body">
-                                            <%- include('../partials/subscriptions/information.ejs' , {subscriptions, showManageBtn : true, customer : customer}); %>
-                                        </div>
-                                    </div>
-                                </div>
-                                <% } %>
                                 <% if(cars) { %>
-                                <div class="col-6 grid-margin stretch-card">
+                                <div class="col-sm-12 col-md-6 grid-margin stretch-card">
                                     <div class="card card-rounded">
                                         <div class="card-body">
                                             <div class="d-sm-flex justify-content-between align-items-start">
@@ -146,21 +137,20 @@
                                             </div>
                                             <br>
                                             <div class="table-responsive  mt-1">
-                                                <% let enableActions = (user.role === roles.ADMIN || customer.services.length < 1) %>
                                                 <table id="users" class="table table-hover stripe">
                                                     <thead>
                                                         <tr>
                                                             <th>Brand</th>
                                                             <th>Model</th>
                                                             <th>Plate</th>
-                                                            <% if(enableActions) { %>
                                                             <th>Action</th>
-                                                            <% } %>
                                                         </tr>
                                                     </thead>
                                                     <tbody>
                                                         <% if(cars) { %>
                                                         <% for(car of cars) { %>
+                                                        <% let enableActions = (user.role === roles.ADMIN || car.services.length < 1) %>
+
                                                         <tr>
                                                             <td>
                                                                 <a class="btn-link"
@@ -182,6 +172,8 @@
                                                                     class="btn btn-icon btn-icon-no-border no-margin">
                                                                     <i class="fas fa-trash-alt icon-sm text-danger"></i>
                                                                 </a>
+                                                                <% } else { %>
+                                                                N/A
                                                                 <% } %>
                                                             </td>
                                                         </tr>
@@ -190,6 +182,15 @@
                                                     </tbody>
                                                 </table>
                                             </div>
+                                        </div>
+                                    </div>
+                                </div>
+                                <% } %>
+                                <% if(customer.hasSubscription){ %>
+                                <div class="col-md-12 grid-margin stretch-card">
+                                    <div class="card card-rounded">
+                                        <div class="card-body">
+                                            <%- include('../partials/subscriptions/information.ejs' , {subscriptions, showManageBtn : true, customer : customer, showCreateBtn: false}); %>
                                         </div>
                                     </div>
                                 </div>
