Optimize make active nav item function. Change some routes name.

--- a/views/charges/index.ejs
+++ b/views/charges/index.ejs
@@ -81,7 +81,7 @@
                                                             <td>
                                                                 <% if(charge.billing_details.email) { %>
                                                                 <a
-                                                                    href="/view-user/<%= charge.customer%>?billingID=true">
+                                                                    href="/customers/<%= charge.customer%>?billingID=true">
                                                                     <%= charge.billing_details.email %>
                                                                 </a>
                                                                 <% } else { %>
