--- a/views/dashboards/mainDashboard.ejs
+++ b/views/dashboards/mainDashboard.ejs
@@ -1069,7 +1069,7 @@
                                                                             <tr>
                                                                                 <td>
                                                                                     <a class="btn-link"
-                                                                                        href="/view-user/<%- customer.id%>">
+                                                                                        href="/customers/<%- customer.id%>">
                                                                                         <%- customer.personalInfo.firstName + ' ' + customer.personalInfo.lastName %>
                                                                                         <% if(!customer.hasAllInformation) {%>
                                                                                         <i class="mdi mdi-alert text-warning"
