--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -233,7 +233,7 @@
                             <%- user.email%>
                         </p>
                     </div>
-                    <a href="/view-user/<%- user.id%>?viewType=myProfile" class="dropdown-item">
+                    <a href="/customers/<%- user.id%>?viewType=myProfile" class="dropdown-item">
                         <!-- <i class="dropdown-item-icon mdi mdi-account-outline text-primary me-2"></i>  -->
                         <i class="dropdown-item-icon far fa-user text-primary me-2"></i> My Profile
                         <!-- <span class="badge badge-pill badge-danger">1</span> -->
