--- a/views/cars/create.ejs
+++ b/views/cars/create.ejs
@@ -46,7 +46,7 @@
                                     <div class="card card-rounded">
                                         <div class="card-body">
                                             <h4>Create Car</h4>
-                                            <form id="form-create-car" class="pt-3" action="/create-car" method="post">
+                                            <form id="form-create-car" class="pt-3" action="/cars/create" method="post">
                                                 <input id="userID" name="userID" value="<%= user.id%>" hidden />
                                                 <div class="row">
                                                     <% if(siToAddCar.length > 0) { %>
