--- a/views/cars/index.ejs
+++ b/views/cars/index.ejs
@@ -53,7 +53,7 @@
                                                 </div>
                                                 <% if(canAddCar) { %>
                                                 <div>
-                                                    <a href="/create-car" class="btn btn-primary btn-icon-text"
+                                                    <a href="/cars/create" class="btn btn-primary btn-icon-text"
                                                         type="button">
                                                         <i class="fas fa-plus btn-icon-prepend"></i>Add Car</a>
                                                 </div>
