--- a/views/user/view.ejs
+++ b/views/user/view.ejs
@@ -55,11 +55,11 @@
                                                 </div>
                                                 <div
                                                     class="d-sm-flex justify-content-between align-items-start float-end">
-                                                    <a href="/changePassword/<%- customer.id%>?url=/view-user"
+                                                    <a href="/changePassword/<%- customer.id%>?url=/customers"
                                                         type="button" class="btn btn-primary btn-icon-text me-2">
                                                         <i class="fa-solid fa-key"></i> Change Password
                                                     </a>
-                                                    <a href="/edit-user/<%- customer.id%>?url=/view-user" data-id="user"
+                                                    <a href="/edit-user/<%- customer.id%>?url=/customers" data-id="user"
                                                         type="button" class="btn btn-primary btn-icon-text">
                                                         <i class="fa-solid fa-user-pen"></i> Edit Personal Info
                                                     </a>
@@ -162,7 +162,7 @@
 
                                                             <td>
                                                                 <% if(enableActions) { %>
-                                                                <a href="/edit-car/<%- car.id%>?url=/cars" type="button"
+                                                                <a href="/cars/edit/<%- car.id%>?url=/cars" type="button"
                                                                     class="btn btn-icon btn-icon-no-border no-margin">
                                                                     <i class="far fa-edit icon-sm"></i>
                                                                 </a>
