--- a/views/user/services.ejs
+++ b/views/user/services.ejs
@@ -69,7 +69,7 @@
                                                             </td>
 
                                                             <td>
-                                                                <%= moment(service?.date).isValid() ? moment(service?.date).format(completeDateFormat) : 'N/A' %>
+                                                                <%= moment(service?.created_date).isValid() ? moment(service?.created_date).format(completeDateFormat) : 'N/A' %>
                                                             </td>
 
                                                             <td><%= service?.authorizedBy?.email%></td>
