--- a/views/dashboards/mainDashboard.ejs
+++ b/views/dashboards/mainDashboard.ejs
@@ -35,37 +35,38 @@
             <%- include('../partials/sidebar.ejs' , {user}); %>
             <div class="main-panel">
                 <div class="content-wrapper">
-                    <div class="row">
+                    <div class="row h-100">
                         <div class="col-sm-12">
-                            <div class="home-tab">
+                            <div class="home-tab h-100">
                                 <div class="d-sm-flex align-items-center justify-content-between border-bottom">
                                     <ul class="nav nav-tabs" role="tablist">
                                         <li class="nav-item">
                                             <a class="nav-link active" id="home-tab" data-bs-toggle="tab"
-                                                href="#overview" role="tab" aria-controls="overview"
-                                                aria-selected="true">Overview</a>
+                                                href="#dashboard" role="tab" aria-controls="dashboard"
+                                                aria-selected="true">Dashboard</a>
                                         </li>
                                         <li class="nav-item">
-                                            <a class="nav-link" id="home-tab" data-bs-toggle="tab" href="#members"
+                                            <a class="nav-link" id="overview-tab" data-bs-toggle="tab" href="#overview"
+                                                role="tab" aria-controls="overview" aria-selected="true">Overview</a>
+                                        </li>
+                                        <li class="nav-item">
+                                            <a class="nav-link" id="members-tab" data-bs-toggle="tab" href="#members"
                                                 role="tab" aria-controls="members" aria-selected="true">Members</a>
                                         </li>
                                         <li class="nav-item">
                                             <a class="nav-link" id="profile-tab" data-bs-toggle="tab" href="#plan"
                                                 role="tab" aria-selected="false">My Plans</a>
                                         </li>
-                                        <!-- <li class="nav-item">
-                                            <a class="nav-link" id="contact-tab" data-bs-toggle="tab"
-                                                href="#demographics" role="tab" aria-selected="false">Demographics</a>
-                                        </li>
-                                        <li class="nav-item">
-                                            <a class="nav-link border-0" id="more-tab" data-bs-toggle="tab" href="#more"
-                                                role="tab" aria-selected="false">More</a>
-                                        </li> -->
                                     </ul>
                                 </div>
-                                <div class="tab-content tab-content-basic">
-                                    <div class="tab-pane fade show active" id="overview" role="tabpanel"
-                                        aria-labelledby="overview">
+                                <div class="tab-content tab-content-basic h-100">
+                                    <div class="tab-pane show active h-100" id="dashboard" role="tabpanel">
+                                        <iframe
+                                            style="width: 100%; height: 100%; background: #F1F5F4;border: none;border-radius: 2px;box-shadow: 0 2px 10px 0 rgba(70, 76, 79, .2);"
+                                            src="https://charts.mongodb.com/charts-autocare-development-kzztx/embed/dashboards?id=62280248-a354-4826-891f-fa5a1c9302ea&theme=light&autoRefresh=true&maxDataAge=60&showTitleAndDesc=false&scalingWidth=fixed&scalingHeight=fixed&attribution=false
+                                        "></iframe>
+                                    </div>
+                                    <div class="tab-pane fade" id="overview" role="tabpanel" aria-labelledby="overview">
                                         <div class="row">
                                             <div class="col-sm-12">
                                                 <div
@@ -1133,51 +1134,47 @@
                                     </div>
                                 </div>
 
+                                <!-- content-wrapper ends -->
+                                <!-- partial:partials/_footer.html -->
+                                <%- include('../partials/footer.ejs'); %>
+                                <!-- partial -->
                             </div>
+                            <!-- main-panel ends -->
                         </div>
+                        <!-- page-body-wrapper ends -->
                     </div>
-                </div>
-                <!-- content-wrapper ends -->
-                <!-- partial:partials/_footer.html -->
-                <%- include('../partials/footer.ejs'); %>
-                <!-- partial -->
-            </div>
-            <!-- main-panel ends -->
-        </div>
-        <!-- page-body-wrapper ends -->
-    </div>
-    <!-- container-scroller -->
+                    <!-- container-scroller -->
 
-    <!-- plugins:js -->
-    <script src="./vendors/js/vendor.bundle.base.js"></script>
-    <!-- endinject -->
-    <!-- Plugin js for this page -->
-    <script src="./vendors/chart.js/Chart.min.js"></script>
-    <script src="./vendors/bootstrap-datepicker/bootstrap-datepicker.min.js"></script>
-    <script src="./vendors/progressbar.js/progressbar.min.js"></script>
-    <script type="text/javascript"
-        src="https://cdnjs.cloudflare.com/ajax/libs/jquery-cookie/1.4.1/jquery.cookie.min.js"></script>
+                    <!-- plugins:js -->
+                    <script src="./vendors/js/vendor.bundle.base.js"></script>
+                    <!-- endinject -->
+                    <!-- Plugin js for this page -->
+                    <script src="./vendors/chart.js/Chart.min.js"></script>
+                    <script src="./vendors/bootstrap-datepicker/bootstrap-datepicker.min.js"></script>
+                    <script src="./vendors/progressbar.js/progressbar.min.js"></script>
+                    <script type="text/javascript"
+                        src="https://cdnjs.cloudflare.com/ajax/libs/jquery-cookie/1.4.1/jquery.cookie.min.js"></script>
 
-    <!-- End plugin js for this page -->
-    <!-- inject:js -->
-    <script src="./js/off-canvas.js"></script>
-    <script src="./js/hoverable-collapse.js"></script>
-    <script src="./js/template.js"></script>
-    <script src="./js/settings.js"></script>
-    <script src="./js/todolist.js"></script>
-    <!-- endinject -->
-    <!-- Custom js for this page-->
-    <script type="text/javascript" src="https://js.stripe.com/v3/"></script>
-    <script type="text/javascript" src="../js/account.js"></script>
-    <script src="./js/jquery.cookie.js" type="text/javascript"></script>
-    <script src="./js/dashboard.js"></script>
-    <script src="./js/Chart.roundedBarCharts.js"></script>
-    <!-- End custom js for this page-->
-    <!-- <script src="../js/helper-functions.js"></script> -->
-    <!-- Datatables -->
-    <!-- Alerts Code -->
-    <%- include('../partials/alerts.ejs', {message, alertType}); %>
-    <%- include('../partials/dataTable.ejs', {tableID : '#membersTable'}); %>
+                    <!-- End plugin js for this page -->
+                    <!-- inject:js -->
+                    <script src="./js/off-canvas.js"></script>
+                    <script src="./js/hoverable-collapse.js"></script>
+                    <script src="./js/template.js"></script>
+                    <script src="./js/settings.js"></script>
+                    <script src="./js/todolist.js"></script>
+                    <!-- endinject -->
+                    <!-- Custom js for this page-->
+                    <script type="text/javascript" src="https://js.stripe.com/v3/"></script>
+                    <script type="text/javascript" src="../js/account.js"></script>
+                    <script src="./js/jquery.cookie.js" type="text/javascript"></script>
+                    <script src="./js/dashboard.js"></script>
+                    <script src="./js/Chart.roundedBarCharts.js"></script>
+                    <!-- End custom js for this page-->
+                    <!-- <script src="../js/helper-functions.js"></script> -->
+                    <!-- Datatables -->
+                    <!-- Alerts Code -->
+                    <%- include('../partials/alerts.ejs', {message, alertType}); %>
+                    <%- include('../partials/dataTable.ejs', {tableID : '#membersTable'}); %>
 </body>
 
 </html>
