--- a/views/history/index.ejs
+++ b/views/history/index.ejs
@@ -89,7 +89,7 @@
                                                                 <%- history.type%>
                                                             </td>
                                                             <td>
-                                                                <%= moment(history.date).isValid() ? moment(history.date).format(completeDateFormat) : 'N/A' %>
+                                                                <%= moment(history?.created_date).isValid() ? moment(history?.created_date).format(completeDateFormat) : 'N/A' %>
 
                                                             </td>
                                                             <td>
