--- a/views/history/view.ejs
+++ b/views/history/view.ejs
@@ -77,7 +77,7 @@
                                                                     <tr>
                                                                         <td>Date</td>
                                                                         <td>
-                                                                            <%= moment(history.date).isValid() ? moment(history.date).format(completeDateFormat) : 'N/A' %>
+                                                                            <%= moment(history?.created_date).isValid() ? moment(history?.created_date).format(completeDateFormat) : 'N/A' %>
                                                                         </td>
                                                                     </tr>
                                                                     <tr>
