--- a/views/partials/subscriptions/information.ejs
+++ b/views/partials/subscriptions/information.ejs
@@ -6,7 +6,7 @@
     </div>
     <div class="d-sm-flex justify-content-between align-items-start float-end">
         <% if(showCreateBtn) { %>
-        <a href="/create-sub" class="btn btn-primary btn-icon-text text-white me-2" type="button">
+        <a href="/create-subscriptions" class="btn btn-primary btn-icon-text text-white me-2" type="button">
             <i class="fas fa-plus btn-icon-prepend"></i>Create Memberships</a>
         <% } %>
         <% if(showManageBtn) { %>
