--- a/views/services/index.ejs
+++ b/views/services/index.ejs
@@ -79,7 +79,7 @@
                                                                 </a>
                                                             </td>
                                                             <td>
-                                                                <%= moment(service.date).isValid() ? moment(service.date).format(completeDateFormat) : 'N/A' %>
+                                                                <%= moment(service?.created_date).isValid() ? moment(service?.created_date).format(completeDateFormat) : 'N/A' %>
 
                                                             </td>
                                                             <td>
