--- a/views/services/view.ejs
+++ b/views/services/view.ejs
@@ -71,7 +71,7 @@
                                                         <tr>
                                                             <td>Date</td>
                                                             <td>
-                                                                <%= moment(service.date).isValid() ? moment(service.date).format(completeDateFormat) : 'N/A' %>
+                                                                <%= moment(service?.created_date).isValid() ? moment(service?.created_date).format(completeDateFormat) : 'N/A' %>
                                                             </td>
                                                         </tr>
                                                         <tr>
