--- a/views/dashboards/mainDashboard.ejs
+++ b/views/dashboards/mainDashboard.ejs
@@ -63,7 +63,7 @@
                                     <div class="tab-pane show active h-100" id="dashboard" role="tabpanel">
                                         <iframe
                                             style="width: 100%; height: 100%; background: #F1F5F4;border: none;border-radius: 2px;box-shadow: 0 2px 10px 0 rgba(70, 76, 79, .2);"
-                                            src="https://charts.mongodb.com/charts-autocare-development-kzztx/embed/dashboards?id=62280248-a354-4826-891f-fa5a1c9302ea&theme=light&autoRefresh=true&maxDataAge=60&showTitleAndDesc=false&scalingWidth=fixed&scalingHeight=fixed&attribution=false
+                                            src="https://charts.mongodb.com/charts-autocare-development-kzztx/embed/dashboards?id=62280248-a354-4826-891f-fa5a1c9302ea&theme=light&autoRefresh=true&maxDataAge=60&showTitleAndDesc=false&scalingWidth=scale&scalingHeight=fixed&attribution=false
                                         "></iframe>
                                     </div>
                                     <div class="tab-pane fade" id="overview" role="tabpanel" aria-labelledby="overview">
