Bug fixes on get car services by car list. Optimize get all cars by user

--- a/views/services/index.ejs
+++ b/views/services/index.ejs
@@ -73,7 +73,7 @@
 
                                                             </td>
                                                             <td>
-                                                                <a class="btn-link" href="/car/<%- service?.car.id%>">
+                                                                <a class="btn-link" href="/car/<%- service?.car?.id%>">
                                                                     <%- service?.car?.brand%> <%- service?.car?.model%>
                                                                     <%- service?.car?.plate%>
                                                                 </a>
