--- a/views/services/view.ejs
+++ b/views/services/view.ejs
@@ -65,7 +65,9 @@
                                                         <tr>
                                                             <td>Car</td>
                                                             <td>
-                                                                <%- service?.car?.brand%>
+                                                                Brand: <%- car?.brand%> <br>
+                                                                Model: <%- car?.model%> <br>
+                                                                Plate: <%- car?.plate%>
                                                             </td>
                                                         </tr>
                                                         <tr>
