Fix edit car from profile.

--- a/views/user/view.ejs
+++ b/views/user/view.ejs
@@ -162,7 +162,7 @@
 
                                                             <td>
                                                                 <% if(enableActions) { %>
-                                                                <a href="/cars/edit/<%- car.id%>?url=/cars" type="button"
+                                                                <a href="/edit-car/<%- car.id%>?url=/cars" type="button"
                                                                     class="btn btn-icon btn-icon-no-border no-margin">
                                                                     <i class="far fa-edit icon-sm"></i>
                                                                 </a>
