--- a/views/partials/sidebar.ejs
+++ b/views/partials/sidebar.ejs
@@ -22,8 +22,8 @@
         </li>
         <li class="nav-item">
             <a class="nav-link" href="/charges">
-                <i class="fa-solid fa-clock-rotate-left menu-icon"></i>
-                <span class="menu-title">Stripe Charges</span>
+                <i class="fa-solid fa-file-invoice menu-icon"></i>
+                <span class="menu-title">Billing History</span>
             </a>
         </li>
         <% } %>
